WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70063
Fix performance of ValueToInt32 node when predicting double
https://bugs.webkit.org/show_bug.cgi?id=70063
Summary
Fix performance of ValueToInt32 node when predicting double
Oliver Hunt
Reported
2011-10-13 15:15:15 PDT
Fix performance of ValueToInt32 node when predicting double
Attachments
Patch
(7.65 KB, patch)
2011-10-13 15:17 PDT
,
Oliver Hunt
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-10-13 15:17:53 PDT
Created
attachment 110916
[details]
Patch
Oliver Hunt
Comment 2
2011-10-13 15:23:43 PDT
Committed
r97410
: <
http://trac.webkit.org/changeset/97410
>
Yuqiang Xian
Comment 3
2011-10-13 18:17:22 PDT
--- a/Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp +++ b/Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp @@ -851,16 +851,7 @@ void SpeculativeJIT::compile(Node& node) } case ValueToInt32: { - if (at(node.child1()).shouldNotSpeculateInteger()) { - // Do it the safe way. - nonSpeculativeValueToInt32(node); - break; - } - - SpeculateIntegerOperand op1(this, node.child1()); - GPRTemporary result(this, op1); - m_jit.move(op1.gpr(), result.gpr()); - integerResult(result.gpr(), m_compileIndex, op1.format()); + compileValueToInt32(node.child1()); break; } I think it should be compileValueToInt32(node);
Yuqiang Xian
Comment 4
2011-10-14 02:49:39 PDT
(In reply to
comment #3
) I have included the fix in
bug #70069
> > I think it should be compileValueToInt32(node);
Yuqiang Xian
Comment 5
2011-10-14 02:50:29 PDT
(In reply to
comment #4
) Sorry - should be
bug #70096
> (In reply to
comment #3
) > > I have included the fix in
bug #70069
> > > > > I think it should be compileValueToInt32(node);
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug