Source/JavaScriptCore/dfg/DFGAbstractState.cpp
@@ -212,8 +212,12 @@ bool AbstractState::execute(NodeIndex nodeIndex)
         break;
             
     case ValueToInt32:
-        if (!m_graph[node.child1()].shouldNotSpeculateInteger())
-            forNode(node.child1()).filter(PredictInt32);
+        if (!m_graph[node.child1()].shouldNotSpeculateInteger()) {
+            if (m_graph[node.child1()].shouldSpeculateDouble())
+                forNode(node.child1()).filter(PredictNumber);
+            else
+                forNode(node.child1()).filter(PredictInt32);
+        }
         forNode(nodeIndex).set(PredictInt32);
         break;
             
