Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h
@@ -448,6 +448,7 @@ private:
     
     void compileGetCharCodeAt(Node&);
     void compileGetByValOnString(Node&);
+    void compileValueToInt32(Node&);
     
     // It is acceptable to have structure be equal to scratch, so long as you're fine
     // with the structure GPR being clobbered.
